--- a/webapp/templates/register.html
+++ b/webapp/templates/register.html
@@ -180,7 +180,7 @@
 </head>
 <body>
 	<div class="box">
-		<form action='/' method="POST">
+		<form action='/register' method="POST">
         <h2>Sign Up</h2>
 			<div class="inputBox">
 				<label for="username">Username</label>
